# flock

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEARIDEA_BOOTSTRAP.md  Lightning Talk.ipynb  README.md  SESSION_INSTRUCTIONS.md  TOOLING_EVALUATION.md  bootstrap_noisycrickit.sh  dram.yaml  dram_baseline.yaml  fix_is_zero_arg.py  fix_pyproject.py  fix_test.py  fix_type_hints.py  pyproject.toml  requirements.txt  run_micropython_tests.py  setup.py  stoggule_baseline.yaml  test_glom.py  test_glom2.py  test_glom3.py  test_glom_exception.py  test_glom_flock.py  test_glom_flock10.py  test_glom_flock12.py  test_glom_flock13.py  test_glom_flock14.py  test_glom_flock15.py  test_glom_flock2.py  test_glom_flock4.py  test_glom_flock5.py  test_glom_flock6.py  test_glom_flock7.py  test_glom_flock8.py  test_glom_flock9.py  test_iter.py  tox.ini  (+1 more)
.github/: copilot-instructions.md
.github/workflows/: tests.yml
.hypothesis/constants/: 0b7339a24326bab8  32229f5fce108ace  366c283b3fb72d5f  655b554cc4b7628c  6b0f59db917417c4  72a3f5b74a00bd18  7e99e5ae1226dbfd  8e9f7c8431b93400  9f8ef91b30e291c7  a5220066d0d5c2d2  a6558303e5a8d947  bff3096126526d46  c8bd4497eec6343b  ec28c42816ef6140  f4d8b4cf9b819f5a
.hypothesis/examples/04e6b3400353b141/: 0599430d5af98665  12218fa48fb52a6d  70c9a73384cb940c  9593d7557bec7b92  cf4e7908f780c4c4  d39ec3471365d79a  f6fea9a47539a381  fd4cc537b7c2b8da
.hypothesis/examples/0599430d5af98665/: 35f715b73bacc719  4850ed62a3debe01  6c4d7c33a8a50add  76688e395e4a45f5  8afaf27d3573d426  a833e5a8eb0a10df  b5e468275f221fa0  b81892215ec788e9  c169c20687a59585  d3b16c8f3a4ac69e  d8e8924b00cca141  da2185c6fd38dd55  f07b0ba68d8bd8e3
.hypothesis/examples/12218fa48fb52a6d/: ad963e69c5c947cf
.hypothesis/examples/70c9a73384cb940c/: 13bdbd027fc8b487
.hypothesis/examples/9593d7557bec7b92/: 1a5d4d63dff2d764  4020a6244caf5bef  4e3b49df9debe342  5f8ea236bb9aaedd  9df5df89e8d886a6
.hypothesis/examples/cf4e7908f780c4c4/: f2010d1d78711451
.hypothesis/examples/d39ec3471365d79a/: 0cfed8cb5f98034d  1751a41c5f2a3b23  1997603a2f88c12e  1e36c88048744b0b  2ac78a74de721ad9  3fe578319b1703b4  53158a8ec7401e8a  720b893569d17600  787ccce0617d4b87  7b38017370179a33  95074ad148f8e36e  a75e7c76e93eee31  b86ce59e5d1f7340  c390b60085cc2b87  d98703349e7b808d  ea402ee54b9f640b
.hypothesis/examples/f6fea9a47539a381/: dd04c75d1abd966b
.hypothesis/examples/fd4cc537b7c2b8da/: ba211c0c2e7e9675
closure_collector/: closures.py  core.py  tagadile.py  tags.py  util.py
closure_collector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: pycon.py  simulate_characters.py
examples/mythica/: model.py
flock/: __init__.py  closures.py  core.py  lambdas.py  util.py
mythica/: Attribute Tables.csv  model.py
src/closure_collector/: closures.py  core.py  tags.py  util.py
src/flock/: __init__.py  compat.py  core.py  util.py
test/: __init__.py  flockdict.py  test_basic.py  test_closure_aggregator.py  test_closure_collector.py  test_closures.py  test_flockdict.py  test_hypothesis.py  test_micropython_core.py  test_tagadile.py  test_tags.py  test_util.py
